# tic-tac-toe-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  game_state.cpp  game_state.h  main.cpp  main_graphic_mode.cpp  main_text_mode.cpp  minimax.cpp  minimax.h
tests/: CMakeLists.txt  game_state_test.cc
